Fixed hamburger icon not changing colour in dark mode

--- a/style.css
+++ b/style.css
@@ -74,82 +74,43 @@ img {
     grid-template-columns: 1fr;
   }
 
-  #projects {
-    display: none !important;
-  }
-
-  #about {
-    display: none !important;
-  }
-
-  #source {
-    display: none !important;
+  #nav a {
+    display: none;
   }
 
   #hamburger {
+    display: inline-block !important;
+  }
+
+    /* #hamburger, #hamburger span {
+    display: block !important;
+  } */
+
+  /* #nav button:first-of-type {
+    display: inline-block !important;
+  } */
+
+  /* #hamburger span {
     display: block !important;
   }
+
+  #hamburger.open {
+    display: block !important;
+  } */
   
 
 }
 
 
-#thumbnails > div {
-  position: relative;
-}
 
-
-#thumbnails > div > div {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  color: white;
-  font-size: 240%;
-  font-family: "Roboto";
-  text-align: center;
-  background-color: rgba(1, 1, 1, 0.65);
-  opacity: 0;
-  cursor: pointer;
-}
-
-
-#thumbnails > div > div:hover {
-  transition: 0.5s;
-  opacity: 1;
-}
-
-
-#thumbnails > div > div:not(:hover) {
-  transition: 0.5s;
-  opacity: 0;
- }
-
-
- #thumbnails > div > div > span {
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   width: 90%;
- }
-
-
-#thumbnails img {
-  width: 100%;
-  height: 100%;
-  vertical-align: middle;
-}
 
 #hamburger {
-  /* margin: 0;
-  padding: 0;  */
   display: none;
+  margin: 0;
+  padding: 0;
   width: 30px;
   height: 30px;
   position: relative;
-  /* margin: 50px auto; */
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
@@ -159,17 +120,17 @@ img {
   -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   cursor: pointer;
+  border: 1px solid red;
 }
 
 #hamburger span {
-  display: block;
   position: absolute;
   height: 6px;
   width: 100%;
   background: #000000;
   border-radius: 6px;
   opacity: 1;
-  /* left: 0; */
+  left: 0;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
@@ -178,6 +139,10 @@ img {
   -moz-transition: .25s ease-in-out;
   -o-transition: .25s ease-in-out;
   transition: .25s ease-in-out;
+}
+
+#hamburger.dark-mode-txt span {
+  background: #ffffff;
 }
 
 
@@ -193,13 +158,18 @@ img {
   top: 24px;
 }
 
-#hamburger.open span:nth-child(1) {
+/* #hamburger.open {
+  display: none;
+} */
+
+#hamburger.open span:nth-child(1), #hamburger.open span:nth-child(4) {
   top: 12px;
   width: 0%;
   left: 50%;
 }
 
 #hamburger.open span:nth-child(2) {
+  width: 30px;
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
@@ -207,17 +177,21 @@ img {
 }
 
 #hamburger.open span:nth-child(3) {
+  width: 30px;
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
+
+  /* width: 42px; */
+  /* height: 42px; */
 }
 
-#hamburger.open span:nth-child(4) {
+/* #hamburger.open span:nth-child(4) {
   top: 12px;
   width: 0%;
   left: 50%;
-}
+} */
 
 
 #nav {
@@ -229,6 +203,8 @@ img {
   --underline-width: 0;
   --underline-offset-x: 0;
   --main-bg-color: black;
+
+  /* border: 1px solid red; */
 }
 
 
@@ -252,7 +228,6 @@ img {
   text-decoration: none;
   margin: 0 24px;
   cursor: pointer;
-  /* background-color: rgba(0, 0, 0, 0); */
 }
 
 
@@ -260,6 +235,9 @@ img {
   margin-right: 0;
 }
 
+#nav a:first-of-type {
+  margin-left: 0;
+}
 
 #nav button {
   border: 0;
@@ -268,9 +246,9 @@ img {
   cursor: pointer;
 }
 
-#nav button:first-of-type {
+/* #nav button:first-of-type {
   display: none;
-}
+} */
 
 #nav button:last-of-type {
   margin-left: auto;
@@ -280,8 +258,6 @@ img {
 #nav button img {
   height: 30px;
   width: 30px;
-  /* -webkit-transform: scaleX(-1);
-  transform: scaleX(-1); */
 }
 
 .dark-mode-bg {
@@ -350,6 +326,64 @@ img {
 
 .text a:visited {
   color: rgba(120, 120, 120 ,1);
+}
+
+
+
+
+
+
+
+
+
+
+
+#thumbnails > div {
+  position: relative;
+}
+
+
+#thumbnails > div > div {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: white;
+  font-size: 240%;
+  font-family: "Roboto";
+  text-align: center;
+  background-color: rgba(1, 1, 1, 0.65);
+  opacity: 0;
+  cursor: pointer;
+}
+
+
+#thumbnails > div > div:hover {
+  transition: 0.5s;
+  opacity: 1;
+}
+
+
+#thumbnails > div > div:not(:hover) {
+  transition: 0.5s;
+  opacity: 0;
+ }
+
+
+#thumbnails > div > div > span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+}
+
+
+#thumbnails img {
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
 }
 
 /* .text p {
